fixed some issues found

--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -739,7 +739,7 @@
     "* 321, uncompressed\n",
     "* 4242424242, uncompressed\n",
     "\n",
-    "#### 7.2. Make [this test](/edit/session2/ecc.py) pass\n",
+    "#### 7.2. Make [this test](/edit/session2/helper.py) pass\n",
     "```\n",
     "helper.py:HelperTest:test_encode_base58_checksum\n",
     "```\n",
@@ -770,6 +770,8 @@
    ],
    "source": [
     "# Exercise 7.1\n",
+    "\n",
+    "from ecc import G\n",
     "\n",
     "components = (\n",
     "    # (secret, compressed)\n",
@@ -872,6 +874,8 @@
    ],
    "source": [
     "# Exercise 8.1\n",
+    "\n",
+    "from ecc import G\n",
     "\n",
     "# use a passphrase\n",
     "passphrase = b'Jimmy Song Programming Blockchain'\n",
