--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -71,7 +71,6 @@
     "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
     "\n",
     "# iterate over points\n",
-    "for x_raw, y_raw in points:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
@@ -475,7 +474,7 @@
     "* 321, uncompressed\n",
     "* 4242424242, uncompressed\n",
     "\n",
-    "#### 7.2. Make [this test](/edit/session2/ecc.py) pass\n",
+    "#### 7.2. Make [this test](/edit/session2/helper.py) pass\n",
     "```\n",
     "helper.py:HelperTest:test_encode_base58_checksum\n",
     "```\n",
@@ -493,6 +492,8 @@
    "outputs": [],
    "source": [
     "# Exercise 7.1\n",
+    "\n",
+    "from ecc import G\n",
     "\n",
     "components = (\n",
     "    # (secret, compressed)\n",
@@ -554,6 +555,8 @@
    "outputs": [],
    "source": [
     "# Exercise 8.1\n",
+    "\n",
+    "from ecc import G\n",
     "\n",
     "# use a passphrase\n",
     "passphrase = b'<fill this in>'\n",
