--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -150,17 +150,19 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "prev_tx = bytes.fromhex('eb581753a4dbd6befeaaaa28a6f4576698ba13a07c03da693a65bce11cf9887a')\n",
-    "prev_index = 1\n",
+    "from tx import Tx\n",
+    "\n",
+    "prev_tx = bytes.fromhex('<fill this in>')\n",
+    "prev_index = -1  # FILL THIS IN\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
     "target_amount = 0.04\n",
-    "change_address = 'mzx5YhAH9kNHtcN481u6WkjeHjYtVeKVh2'\n",
-    "change_amount = 0.317\n",
-    "secret = 8675309\n",
-    "priv = PrivateKey(secret=secret)\n",
+    "change_address = '<fill this in>'\n",
+    "fee = 50000\n",
+    "secret = -1  # FILL THIS IN\n",
+    "private_key = PrivateKey(secret=secret)\n",
     "\n",
     "# initialize inputs\n",
-    "# create a new tx input with prev_tx, prev_index, blank script_sig and max sequence\n",
+    "# create a new tx input with prev_tx, prev_index\n",
     "\n",
     "# initialize outputs\n",
     "# decode the hash160 from the target address\n",
@@ -169,15 +171,16 @@
     "# create a new tx output for target with amount and script_pubkey\n",
     "# decode the hash160 from the change address\n",
     "# convert hash160 to p2pkh script\n",
-    "# convert change amount to satoshis (multiply by 100 million)\n",
+    "# get the value for the transaction input (remember testnet=True)\n",
+    "# calculate change_satoshis based on previous amount, target_satoshis & fee\n",
     "# create a new tx output for target with amount and script_pubkey\n",
     "\n",
-    "# create the transaction\n",
+    "# create the transaction (name it tx_obj to not conflict)\n",
     "\n",
-    "# now sign the 0th input with the private key using SIGHASH_ALL using sign_input\n",
+    "# now sign the 0th input with the private_key using sign_input\n",
     "\n",
     "# SANITY CHECK: change address corresponds to private key\n",
-    "if priv.point.address(testnet=True) != change_address:\n",
+    "if private_key.point.address(testnet=True) != change_address:\n",
     "    raise RuntimeError('Private Key does not correspond to Change Address, check priv_key and change_address')\n",
     "\n",
     "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
@@ -199,14 +202,14 @@
    "source": [
     "# Bonus\n",
     "\n",
-    "prev_tx_1 = bytes.fromhex('89cbfe2eddaddf1eb11f5c4adf6adaa9bca4adc01b2a3d03f8dd36125c068af4')\n",
-    "prev_index_1 = 0\n",
-    "prev_tx_2 = bytes.fromhex('19069e1304d95f70e03311d9d58ee821e0978e83ecfc47a30af7cd10fca55cf4')\n",
-    "prev_index_2 = 0\n",
+    "prev_tx_1 = bytes.fromhex('<fill this in>')\n",
+    "prev_index_1 = -1  # FILL THIS IN\n",
+    "prev_tx_2 = bytes.fromhex('<fill this in>')\n",
+    "prev_index_2 = -1  # FILL THIS IN\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
-    "target_amount = 1.71\n",
-    "secret = 61740721216174072121\n",
-    "priv = PrivateKey(secret=secret)\n",
+    "fee = 50000\n",
+    "secret = -1  # FILL THIS IN\n",
+    "private_key = PrivateKey(secret=secret)\n",
     "\n",
     "# initialize inputs\n",
     "# create the first tx input with prev_tx_1, prev_index_1\n",
@@ -215,15 +218,15 @@
     "# initialize outputs\n",
     "# decode the hash160 from the target address\n",
     "# convert hash160 to p2pkh script\n",
-    "# convert target amount to satoshis (multiply by 100 million)\n",
+    "# calculate target amount by adding the input values and subtracting the fee\n",
     "# create a single tx output for target with amount and script_pubkey\n",
     "\n",
     "# create the transaction\n",
     "\n",
-    "# sign both inputs with the private key using SIGHASH_ALL using sign_input\n",
+    "# sign both inputs with the private key using sign_input\n",
     "\n",
     "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
-    "if tx_ins[0].script_pubkey(testnet=True).instructions[2] != decode_base58(priv.point.address(testnet=True)):\n",
+    "if tx_ins[0].script_pubkey(testnet=True).instructions[2] != decode_base58(private_key.point.address(testnet=True)):\n",
     "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
