--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -104,7 +104,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -228,8 +228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending: version: 7f1101000000000000000000e9c1e85b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d2018fbc44bebb024061b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
-      "receiving: version: 7f1101000d04000000000000ebc1e85b00000000000000000000000000000000000000000000ffff4830fd33c5050d04000000000000000000000000000000000000000000000000bea3e9d7673d8d75102f5361746f7368693a302e31372e302fc404160001\n",
+      "sending: version: 7f110100000000000000000032e1e95b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d20c26083c5b59f50881b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
+      "receiving: version: 7f1101000d0400000000000032e1e95b00000000000000000000000000000000000000000000ffff4830fd33ddff0d040000000000000000000000000000000000000000000000001587f2d35309372e102f5361746f7368693a302e31372e302f6005160001\n",
       "sending: verack: \n",
       "receiving: verack: \n",
       "verack: \n"
@@ -238,6 +238,8 @@
    ],
    "source": [
     "# Handshake Example\n",
+    "\n",
+    "from network import SimpleNode, VersionMessage\n",
     "\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
@@ -315,6 +317,8 @@
    ],
    "source": [
     "# Block Header Download Example\n",
+    "\n",
+    "from network import GetHeadersMessage, HeadersMessage\n",
     "\n",
     "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
     "node.handshake()\n",
@@ -433,8 +437,8 @@
     "tx_hash0 = bytes.fromhex('c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5')\n",
     "tx_hash1 = bytes.fromhex('c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5')\n",
     "\n",
-    "merkle_parent = hash256(tx_hash0+tx_hash1)\n",
-    "print(merkle_parent.hex())"
+    "parent = hash256(tx_hash0+tx_hash1)\n",
+    "print(parent.hex())"
    ]
   },
   {
@@ -648,6 +652,8 @@
    "source": [
     "# Merkle Root Example\n",
     "\n",
+    "from helper import merkle_parent_level\n",
+    "\n",
     "hex_hashes = [\n",
     "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
     "    'c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5',\n",
@@ -777,6 +783,8 @@
    ],
    "source": [
     "# Block Merkle Root Example\n",
+    "\n",
+    "from helper import merkle_root\n",
     "\n",
     "tx_hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
@@ -917,11 +925,6 @@
    "source": [
     "# Exercise 10.1\n",
     "\n",
-    "from block import TESTNET_GENESIS_BLOCK_HASH, Block\n",
-    "from helper import read_varint\n",
-    "from network import BLOCK_DATA_TYPE, GetDataMessage, SimpleNode\n",
-    "from tx import Tx\n",
-    "\n",
     "block_hex = '0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900'\n",
     "block_hash = bytes.fromhex(block_hex)\n",
     "\n",
@@ -932,7 +935,7 @@
     "\n",
     "# create a GetDataMessage\n",
     "getdata = GetDataMessage()\n",
-    "# add the block we want\n",
+    "# add_data on the message (BLOCK_DATA_TYPE, block_hash)\n",
     "getdata.add_data(BLOCK_DATA_TYPE, block_hash)\n",
     "# send the getdata command\n",
     "node.send(getdata.command, getdata.serialize())\n",
