--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,46 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: test_parse (network.NetworkEnvelopeTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 84, in test_parse\n",
-      "    envelope = NetworkEnvelope.parse(stream)\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 62, in parse\n",
-      "    raise NotImplementedError\n",
-      "NotImplementedError\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (errors=1)\n",
-      "E\n",
-      "======================================================================\n",
-      "ERROR: test_serialize (network.NetworkEnvelopeTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 96, in test_serialize\n",
-      "    envelope = NetworkEnvelope.parse(stream)\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 62, in parse\n",
-      "    raise NotImplementedError\n",
-      "NotImplementedError\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 1.2\n",
     "\n",
@@ -138,31 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: test_serialize (network.VersionMessageTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 156, in test_serialize\n",
-      "    self.assertEqual(v.serialize().hex(), '7f11010000000000000000000000000000000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d2000000000000000001b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001')\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 149, in serialize\n",
-      "    raise NotImplementedError\n",
-      "NotImplementedError\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2.1\n",
     "\n",
@@ -189,31 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: test_serialize (network.GetHeadersMessageTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 187, in test_serialize\n",
-      "    self.assertEqual(gh.serialize().hex(), '7f11010001a35bd0ca2f4a88c4eda6d213e2378a5758dfcd6af437120000000000000000000000000000000000000000000000000000000000000000000000000000000000')\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 179, in serialize\n",
-      "    raise NotImplementedError\n",
-      "NotImplementedError\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.1\n",
     "\n",
@@ -223,31 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: test_parse (network.HeadersMessageTest)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 213, in test_parse\n",
-      "    headers = HeadersMessage.parse(stream)\n",
-      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 205, in parse\n",
-      "    raise NotImplementedError\n",
-      "NotImplementedError\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3.2\n",
     "\n",
@@ -257,24 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-833e448f8fc1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mversion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVersionMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserialize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_for_commands\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34mb'verack'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/pb-exercises/session7/network.py\u001b[0m in \u001b[0;36mserialize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0;31m# latest block is 4 bytes little endian\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0;31m# relay is 00 if false, 01 if true\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 149\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    150\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Handshake Example\n",
+    "\n",
+    "from network import SimpleNode, VersionMessage\n",
     "\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
@@ -314,6 +200,8 @@
    "outputs": [],
    "source": [
     "# Block Header Download Example\n",
+    "\n",
+    "from network import GetHeadersMessage, HeadersMessage\n",
     "\n",
     "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
     "node.handshake()\n",
@@ -377,13 +265,11 @@
    "source": [
     "# Merkle Parent Example\n",
     "\n",
-    "from helper import hash256\n",
-    "\n",
     "tx_hash0 = bytes.fromhex('c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5')\n",
     "tx_hash1 = bytes.fromhex('c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5')\n",
     "\n",
-    "merkle_parent = hash256(tx_hash0+tx_hash1)\n",
-    "print(merkle_parent.hex())"
+    "parent = hash256(tx_hash0+tx_hash1)\n",
+    "print(parent.hex())"
    ]
   },
   {
@@ -439,6 +325,8 @@
    "outputs": [],
    "source": [
     "# Merkle Parent Level Example\n",
+    "\n",
+    "from helper import merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
@@ -522,6 +410,8 @@
    "outputs": [],
    "source": [
     "# Merkle Root Example\n",
+    "\n",
+    "from helper import merkle_parent_level\n",
     "\n",
     "hex_hashes = [\n",
     "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
@@ -619,6 +509,8 @@
    "outputs": [],
    "source": [
     "# Block Merkle Root Example\n",
+    "\n",
+    "from helper import merkle_root\n",
     "\n",
     "tx_hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
@@ -727,11 +619,6 @@
    "outputs": [],
    "source": [
     "# Exercise 10.1\n",
-    "\n",
-    "from block import TESTNET_GENESIS_BLOCK_HASH, Block\n",
-    "from helper import read_varint\n",
-    "from network import BLOCK_DATA_TYPE, GetDataMessage, SimpleNode\n",
-    "from tx import Tx\n",
     "\n",
     "block_hex = '0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900'\n",
     "block_hash = bytes.fromhex(block_hex)\n",
