--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -221,15 +221,17 @@
    "source": [
     "# Exercise 2.2\n",
     "\n",
-    "block_hash = bytes.fromhex('0000000053787814ed9dd8c029d0a0a9af4ab8ec0591dc31bdc4ab31fae88ce9')\n",
-    "passphrase = b'Jimmy Song Programming Blockchain'  # FILL THIS IN\n",
+    "from bloomfilter import BloomFilter\n",
+    "\n",
+    "block_hash = bytes.fromhex('<fill this in>')\n",
+    "passphrase = b'<fill this in>'  # FILL THIS IN\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
     "print(addr)\n",
     "filter_size = 30\n",
     "filter_num_functions = 5\n",
-    "filter_tweak = 90210  # FILL THIS IN\n",
+    "filter_tweak = -1  # FILL THIS IN\n",
     "\n",
     "# get the hash160 of the address, which is what we need to add to our filter\n",
     "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
@@ -286,8 +288,11 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "last_block_hex = '000000000d65610b5af03d73ed67704713c9b734d87cf4b970d39a0416dd80f9'\n",
-    "passphrase = b'Jimmy Song Programming Blockchain'  # FILL THIS IN\n",
+    "from merkleblock import MerkleBlock, MerkleTree\n",
+    "\n",
+    "last_block_hex = '<fill this in>'\n",
+    "last_block = bytes.fromhex(last_block_hex)\n",
+    "passphrase = b'<fill this in>'  # FILL THIS IN\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
@@ -296,7 +301,7 @@
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
     "filter_size = 30\n",
     "filter_num_functions = 5\n",
-    "filter_tweak = 90210  # FILL THIS IN\n",
+    "filter_tweak = -1  # FILL THIS IN\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
     "fee = 5000  # fee in satoshis\n",
@@ -307,15 +312,13 @@
     "# complete the handshake\n",
     "# load the bloom filter with the filterload command\n",
     "\n",
-    "# set start block to last_block from above\n",
-    "# create GetHeadersMessage with this start block\n",
-    "# send a getheaders message with the start block\n",
+    "# create GetHeadersMessage with the last_block as the start_block\n",
+    "# send a getheaders message (command, serialize)\n",
     "\n",
     "# wait for the headers message\n",
     "# get the stream from the headers\n",
     "# parse the headers message\n",
     "\n",
-    "# store the last block as None\n",
     "# initialize the GetDataMessage\n",
     "# loop through the blocks in the headers\n",
     "    # check that the proof of work on the block is valid\n",
@@ -324,7 +327,7 @@
     "    # add FILTERED_BLOCK_DATA_TYPE last_block to GetDataMessage\n",
     "# send the get_data_message\n",
     "\n",
-    "# initialize prev_tx, prev_index and prev_tx_obj to None\n",
+    "# initialize prev_tx to None\n",
     "# while prev_tx is None \n",
     "    # wait for the merkleblock or tx commands\n",
     "    # initialize the stream from the envelope\n",
@@ -332,24 +335,28 @@
     "        # parse the MerkleBlock\n",
     "        # check that the MerkleBlock is valid\n",
     "    # else we have the tx command\n",
-    "        # parse the tx\n",
-    "        # loop through the enumerated tx outs (enumerate(t.tx_outs))\n",
+    "        # parse the tx (prev)\n",
+    "        # loop through the enumerated tx outs (enumerate(prev.tx_outs))\n",
     "            # if our output has the same address as our address (addr) we found it\n",
     "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
+    "                # break\n",
     "# create tx_in\n",
-    "# get the previous amount from prev_tx_obj\n",
     "# calculate the output amount (prev_amount - fee)\n",
     "# create tx_out\n",
     "# create transaction on testnet\n",
     "# sign the one input we have\n",
     "# serialize and hex to see what it looks like\n",
     "# send this signed transaction on the network\n",
-    "# wait a sec so this message goes through to the other node time.sleep(1) \n",
+    "# wait a sec so this message goes through to the other node sleep(1) \n",
     "# now ask for this transaction from the other node\n",
     "# create a GetDataMessage\n",
     "# ask for our transaction by adding its hash and TX_DATATYPE to the message\n",
     "# send the message\n",
-    "# now wait for a response"
+    "# now wait for a response\n",
+    "# if we have the tx command\n",
+    "    # parse the tx\n",
+    "    # check that the ids are the same\n",
+    "        # yes! we got to what we wanted"
    ]
   }
  ],
