--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -98,7 +98,7 @@
     "stream = BytesIO(bytes.fromhex(hex_tx))\n",
     "# parse the coinbase transaction\n",
     "coinbase = Tx.parse(stream)\n",
-    "# print the first input's script_sig's third item\n",
+    "# print the first input's script_sig's third instruction\n",
     "print(coinbase.tx_ins[0].script_sig.instructions[2])"
    ]
   },
@@ -231,12 +231,12 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -271,19 +271,12 @@
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# bytes.fromhex to get the binary block\n",
     "bin_block = bytes.fromhex(hex_block)\n",
-    "# create a stream using BytesIO\n",
     "stream = BytesIO(bin_block)\n",
-    "# parse the block\n",
     "b = Block.parse(stream)\n",
-    "# get the version\n",
     "version = b.version\n",
-    "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
     "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
-    "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
     "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
     "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
    ]
   },
@@ -322,7 +315,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -442,7 +435,7 @@
     "exponent = bits[-1]\n",
     "# first three bytes are the coefficient in little endian\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
-    "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
+    "# plug into formula coefficient * 256^(exponent-3) to get the target\n",
     "target = coefficient * 256**(exponent-3)\n",
     "# print target using print('{:x}'.format(target).zfill(64))\n",
     "print('{:x}'.format(target).zfill(64))\n",
@@ -511,6 +504,8 @@
    ],
    "source": [
     "# Exercise 7.1\n",
+    "\n",
+    "from block import Block\n",
     "\n",
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
