--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "# create stream with BytesIO and bytes.fromhex\n",
     "# parse the coinbase transaction\n",
-    "# print the first input's script_sig's third item"
+    "# print the first input's script_sig's third instruction"
    ]
   },
   {
@@ -182,13 +182,13 @@
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# bytes.fromhex to get the binary block\n",
-    "# create a stream using BytesIO\n",
-    "# parse the block\n",
-    "# get the version\n",
-    "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
-    "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141"
+    "bin_block = bytes.fromhex(hex_block)\n",
+    "stream = BytesIO(bin_block)\n",
+    "b = Block.parse(stream)\n",
+    "version = b.version\n",
+    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
+    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
+    "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
    ]
   },
   {
@@ -296,7 +296,7 @@
     "# bytes.fromhex to get the bits\n",
     "# last byte is exponent\n",
     "# first three bytes are the coefficient in little endian\n",
-    "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
+    "# plug into formula coefficient * 256^(exponent-3) to get the target\n",
     "# print target using print('{:x}'.format(target).zfill(64))\n",
     "\n",
     "# difficulty formula is 0xffff * 256**(0x1d - 3) / target\n",
@@ -341,6 +341,8 @@
    "outputs": [],
    "source": [
     "# Exercise 7.1\n",
+    "\n",
+    "from block import Block\n",
     "\n",
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
