another batch of updates

--- a/session4/complete/session4.ipynb
+++ b/session4/complete/session4.ipynb
@@ -615,7 +615,7 @@
     "stream = BytesIO(bytes.fromhex(hex_tx))\n",
     "index = 0\n",
     "\n",
-    "# parse the transaction using Tx.Parse\n",
+    "# parse the transaction using Tx.parse\n",
     "t = Tx.parse(stream)\n",
     "# grab the input at index\n",
     "tx_in = t.tx_ins[index]\n",
