--- a/session4/session4.ipynb
+++ b/session4/session4.ipynb
@@ -414,7 +414,7 @@
     "stream = BytesIO(bytes.fromhex(hex_tx))\n",
     "index = 0\n",
     "\n",
-    "# parse the transaction using Tx.Parse\n",
+    "# parse the transaction using Tx.parse\n",
     "# grab the input at index\n",
     "# use the sig_hash method on index and hash_type to get z\n",
     "# combine the script_sig and script_pubkey\n",
