--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -318,7 +318,7 @@
    "source": [
     "# Block Header Download Example\n",
     "\n",
-    "from network import GetHeadersMessage, HeadersMessage\n",
+    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "\n",
     "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
     "node.handshake()\n",
