--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "# Block Header Download Example\n",
     "\n",
-    "from network import GetHeadersMessage, HeadersMessage\n",
+    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "\n",
     "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
     "node.handshake()\n",
@@ -627,7 +627,7 @@
     "# handshake\n",
     "\n",
     "# create a GetDataMessage\n",
-    "# add the block we want\n",
+    "# add_data on the message (BLOCK_DATA_TYPE, block_hash)\n",
     "# send the getdata command\n",
     "\n",
     "# wait for the block command in response\n",
