--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -233,19 +233,19 @@
     "filter_num_functions = 5\n",
     "filter_tweak = -1  # FILL THIS IN\n",
     "\n",
-    "# get the hash160 of the address, which is what we need to add to our filter\n",
-    "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
+    "# get the hash160 of the address using decode_base58\n",
+    "# create a bloom filter using the filter_size, filter_num_functions and filter_tweak above\n",
     "# add the h160 to the bloom filter\n",
     "\n",
     "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
     "# complete the handshake\n",
-    "# load the bloom filter with the filterload command\n",
+    "# send the filterload command with bf.filterload() as the payload\n",
     "# create a getdata message\n",
-    "# add a FILTERED_BLOCK_DATA_TYPE for the block hash above\n",
-    "# send a getdata message for a FILTERED_BLOCK_DATA_TYPE\n",
+    "# add_data (FILTERED_BLOCK_DATA_TYPE, block_hash) to request the block\n",
+    "# send the getdata message\n",
     "# wait for the merkleblock command\n",
     "# wait for the tx command\n",
-    "# print the payload in hex"
+    "# print the envelope payload in hex"
    ]
   },
   {
@@ -307,24 +307,24 @@
     "fee = 5000  # fee in satoshis\n",
     "\n",
     "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
-    "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
+    "# create a bloom filter using variables above\n",
     "# add the h160 to the bloom filter\n",
     "# complete the handshake\n",
-    "# load the bloom filter with the filterload command\n",
+    "# send the 'filterload' command with bf.filterload() as the payload\n",
     "\n",
     "# create GetHeadersMessage with the last_block as the start_block\n",
-    "# send a getheaders message (command, serialize)\n",
+    "# send a getheaders message\n",
     "\n",
     "# wait for the headers message\n",
     "# get the stream from the headers\n",
     "# parse the headers message\n",
     "\n",
     "# initialize the GetDataMessage\n",
-    "# loop through the blocks in the headers\n",
+    "# loop through the blocks in the headers message\n",
     "    # check that the proof of work on the block is valid\n",
     "    # check that this block's prev_block is the last block\n",
     "    # set the last block to the current hash\n",
-    "    # add FILTERED_BLOCK_DATA_TYPE last_block to GetDataMessage\n",
+    "    # add_data(FILTERED_BLOCK_DATA_TYPE, last_block) to get_data_message\n",
     "# send the get_data_message\n",
     "\n",
     "# initialize prev_tx to None\n",
@@ -350,8 +350,8 @@
     "# wait a sec so this message goes through to the other node sleep(1) \n",
     "# now ask for this transaction from the other node\n",
     "# create a GetDataMessage\n",
-    "# ask for our transaction by adding its hash and TX_DATATYPE to the message\n",
-    "# send the message\n",
+    "# add_data (TX_DATA_TYPE, tx_obj.hash()) to get data message\n",
+    "# send the GetDataMessage\n",
     "# now wait for a response\n",
     "# if we have the tx command\n",
     "    # parse the tx\n",
