--- a/session8/complete/session8.ipynb
+++ b/session8/complete/session8.ipynb
@@ -330,9 +330,9 @@
     "filter_num_functions = 5\n",
     "filter_tweak = 90210  # FILL THIS IN\n",
     "\n",
-    "# get the hash160 of the address, which is what we need to add to our filter\n",
+    "# get the hash160 of the address using decode_base58\n",
     "h160 = decode_base58(addr)\n",
-    "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
+    "# create a bloom filter using the filter_size, filter_num_functions and filter_tweak above\n",
     "bf = BloomFilter(filter_size, filter_num_functions, filter_tweak)\n",
     "# add the h160 to the bloom filter\n",
     "bf.add(h160)\n",
@@ -341,19 +341,19 @@
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "# complete the handshake\n",
     "node.handshake()\n",
-    "# load the bloom filter with the filterload command\n",
+    "# send the filterload command with bf.filterload() as the payload\n",
     "node.send(b'filterload', bf.filterload())\n",
     "# create a getdata message\n",
     "getdata = GetDataMessage()\n",
-    "# add a FILTERED_BLOCK_DATA_TYPE for the block hash above\n",
+    "# add_data (FILTERED_BLOCK_DATA_TYPE, block_hash) to request the block\n",
     "getdata.add_data(FILTERED_BLOCK_DATA_TYPE, block_hash)\n",
-    "# send a getdata message for a FILTERED_BLOCK_DATA_TYPE\n",
+    "# send the getdata message\n",
     "node.send(getdata.command, getdata.serialize())\n",
     "# wait for the merkleblock command\n",
     "envelope = node.wait_for_commands([b'merkleblock'])\n",
     "# wait for the tx command\n",
     "envelope = node.wait_for_commands([b'tx'])\n",
-    "# print the payload in hex\n",
+    "# print the envelope payload in hex\n",
     "print(envelope.payload.hex())"
    ]
   },
@@ -478,18 +478,18 @@
     "\n",
     "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
-    "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
+    "# create a bloom filter using variables above\n",
     "bf = BloomFilter(filter_size, filter_num_functions, filter_tweak)\n",
     "# add the h160 to the bloom filter\n",
     "bf.add(h160)\n",
     "# complete the handshake\n",
     "node.handshake()\n",
-    "# load the bloom filter with the filterload command\n",
+    "# send the 'filterload' command with bf.filterload() as the payload\n",
     "node.send(b'filterload', bf.filterload())\n",
     "\n",
     "# create GetHeadersMessage with the last_block as the start_block\n",
     "getheaders_message = GetHeadersMessage(start_block=last_block)\n",
-    "# send a getheaders message (command, serialize)\n",
+    "# send a getheaders message\n",
     "node.send(getheaders_message.command, getheaders_message.serialize())\n",
     "\n",
     "# wait for the headers message\n",
@@ -501,7 +501,7 @@
     "\n",
     "# initialize the GetDataMessage\n",
     "get_data_message = GetDataMessage()\n",
-    "# loop through the blocks in the headers\n",
+    "# loop through the blocks in the headers message\n",
     "for block in headers.blocks:\n",
     "    # check that the proof of work on the block is valid\n",
     "    if not block.check_pow():\n",
@@ -511,7 +511,7 @@
     "        raise RuntimeError\n",
     "    # set the last block to the current hash\n",
     "    last_block = block.hash()\n",
-    "    # add FILTERED_BLOCK_DATA_TYPE last_block to GetDataMessage\n",
+    "    # add_data(FILTERED_BLOCK_DATA_TYPE, last_block) to get_data_message\n",
     "    get_data_message.add_data(FILTERED_BLOCK_DATA_TYPE, last_block)\n",
     "# send the get_data_message\n",
     "node.send(get_data_message.command, get_data_message.serialize())\n",
@@ -564,12 +564,12 @@
     "# now ask for this transaction from the other node\n",
     "# create a GetDataMessage\n",
     "getdata = GetDataMessage()\n",
-    "# ask for our transaction by adding its hash and TX_DATATYPE to the message\n",
+    "# add_data (TX_DATA_TYPE, tx_obj.hash()) to get data message\n",
     "getdata.add_data(TX_DATA_TYPE, tx_obj.hash())\n",
-    "# send the message\n",
+    "# send the GetDataMessage\n",
     "node.send(getdata.command, getdata.serialize())\n",
     "# now wait for a response\n",
-    "envelope = node.wait_for_commands({b'tx', b'reject'})\n",
+    "envelope = node.wait_for_commands([b'tx', b'reject'])\n",
     "# if we have the tx command\n",
     "if envelope.command == b'tx':\n",
     "    # parse the tx\n",
